# cz-benchmarks

./: CHANGELOG.md  CITATION.cff  pyproject.toml
docs/source/: quick_start.md
docs/source/developer_guides/: datasets.md  metrics.md
examples/: end-to-end-tutorial.py  example.py  scvi_all_tasks_benchmark.ipynb  scvi_model_dev_workflow.ipynb  using_czbenchmarks.ipynb
src/czbenchmarks/: utils.py
src/czbenchmarks/metrics/: utils.py
src/czbenchmarks/tasks/: clustering.py  label_prediction.py  sequential.py
src/czbenchmarks/tasks/single_cell/: cross_species_integration.py  cross_species_label_prediction.py
tests/: test_dataset_task_e2e_regression.py  test_integration_end_to_end.py  test_utils.py
tests/metrics/: test_metrics.py
tests/tasks/: test_tasks.py
